修改首页，增加点击按钮

--- a/ailiaoer/index.html
+++ b/ailiaoer/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
+ <!-- Buttons 库的核心文件 -->
+<link rel="stylesheet" href="css/buttons.css">
 <html>
 <head>
 <meta charset="UTF-8" >
@@ -11,9 +13,16 @@
 		<tr align="center">
 			<td background="images/bj.png">
 				<img src="images/01_01.png">
+				<a href="https://itunes.apple.com/cn" class="button button-raised button-pill button-inverse">点击下载应用</a>
 			</td>
 		</tr>
 	</table>
+	<table align="center" width="100%">
+			<tr align="center">
+	
+	  </tr>
+	</table> 
+
 	<table align="center" width="100%" border="0" cellpadding="0">
 		<tr align="center">
 			<td>
@@ -25,6 +34,7 @@
 		<tr align="center">
 			<td>
 				<img src="images/01_03.png">
+				<a href="https://itunes.apple.com/cn" class="button button-raised button-pill button-inverse">点击下载应用</a>
 			</td>
 		</tr>
 		<tr align="center" height="40px">
