--- a/ailiaoer/index.html
+++ b/ailiaoer/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 <meta charset="UTF-8" >
-<title>Time Memory</title>
+<title>时间记忆技术服务支持</title>
 
 </head>
 
@@ -13,7 +13,7 @@
 		<tr align="center">
 			<td background="images/bj.png">
 				<img src="images/01_01.png">
-				<a href="https://itunes.apple.com/cn" class="button button-raised button-pill button-inverse">点击下载应用</a>
+				<a href="https://itunes.apple.com/cn/app/id1455489863?mt=8" class="button button-raised button-pill button-inverse">点击下载应用</a>
 			</td>
 		</tr>
 	</table>
@@ -34,10 +34,35 @@
 		<tr align="center">
 			<td>
 				<img src="images/01_03.png">
-				<a href="https://itunes.apple.com/cn" class="button button-raised button-pill button-inverse">点击下载应用</a>
+				<a href="https://itunes.apple.com/cn/app/id1455489863?mt=8" class="button button-raised button-pill button-inverse">点击下载应用</a>
 			</td>
 		</tr>
-		<tr align="center" height="40px">
+		<tr align="center">
+			<td>
+			<img src="images/0x0ss.jpg" width="300">
+			<img src="images/0x0ss-2.jpg" width="300">
+			<img src="images/0x0ss-3.jpg" width="300">
+		</td>
+
+		</tr>
+		
+
+		<tr align="center" height="100px">
+		<td> 
+			</br>
+				时间记忆技术支持
+		</br>
+	</br>
+				邮箱：13758237253@139.com
+			</br>
+		</br>
+				有问题请随时联系我们
+			</br>
+			</td>
+		</tr>
+
+		<tr align="center" height="80px">
+				
 			<td>
 				copyright ©时间记忆
 			</td>
